--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 yew = { version = "0.20.0", features=["csr"] }
 web-sys = { version = "0.3.63", features=["ScrollIntoViewOptions", "ScrollBehavior"] }
+wasm-bindgen = "0.2.86"
+gloo-utils = { version = "0.1.6", features=["serde"] }
+serde = "1.0.163"
