--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yew = { version = "0.20.0", features=["csr"] }
-web-sys = { version = "0.3.63", features=["ScrollIntoViewOptions", "ScrollBehavior"] }
+yew = { version = "0.20.0", features = ["csr"] }
+web-sys = { version = "0.3.63", features = [
+    "ScrollIntoViewOptions",
+    "ScrollBehavior",
+] }
 wasm-bindgen = "0.2.86"
-gloo-utils = { version = "0.1.6", features=["serde"] }
+gloo = "0.10.0"
+gloo-utils = { version = "0.2.0", features = ["serde"] }
 serde = "1.0.163"
